--- a/client/filemanagerwidget.ui
+++ b/client/filemanagerwidget.ui
@@ -28,7 +28,7 @@
   <property name="styleSheet">
    <string notr="true">background:#FFFFFF;</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="23,0,470,0">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -36,44 +36,119 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="ltp::client::ModuleButtonsWidget" name="fileManagerButtonWidget_" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-       <horstretch>80</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QLabel" name="ftpServerLabel_">
+        <property name="styleSheet">
+         <string notr="true">font:13px SIMHEI;</string>
+        </property>
+        <property name="text">
+         <string>Ftp Server ：</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="ftpServerLineEdit_">
+        <property name="minimumSize">
+         <size>
+          <width>300</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>10</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="ltp::base::PushButton" name="cdToParentButton_">
+        <property name="text">
+         <string>上级目录</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="ltp::base::PushButton" name="connectButton_">
+        <property name="text">
+         <string>连接</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="Line" name="line_3">
+     <property name="styleSheet">
+      <string notr="true">border-top: 1px solid #E6E6E6;</string>
      </property>
-     <property name="minimumSize">
-      <size>
-       <width>80</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>80</width>
-       <height>16777215</height>
-      </size>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="ltp::client::FileManagerBar" name="fileManagerBar_" native="true"/>
+    <widget class="ltp::base::FileTableWidget" name="tableWidget_">
+     <column>
+      <property name="text">
+       <string>名称</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>大小</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>类型</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>权限</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>更新日期</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item>
+    <widget class="Line" name="line">
+     <property name="styleSheet">
+      <string notr="true">border-top: 1px solid #E6E6E6;</string>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ltp::client::ModuleButtonsWidget</class>
-   <extends>QWidget</extends>
-   <header>modulebuttonswidget.h</header>
-   <container>1</container>
+   <class>ltp::base::FileTableWidget</class>
+   <extends>QTableWidget</extends>
+   <header>base/filetablewidget.h</header>
   </customwidget>
   <customwidget>
-   <class>ltp::client::FileManagerBar</class>
-   <extends>QWidget</extends>
-   <header>filemanagerbar.h</header>
-   <container>1</container>
+   <class>ltp::base::PushButton</class>
+   <extends>QPushButton</extends>
+   <header>base/pushbutton.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
