--- a/client/processwidget.ui
+++ b/client/processwidget.ui
@@ -28,7 +28,7 @@
   <property name="styleSheet">
    <string notr="true">background:#FFFFFF;</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -36,65 +36,84 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="ltp::client::ModuleButtonsWidget" name="processModuleButtonWidget_" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-       <horstretch>80</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <layout class="QVBoxLayout" name="mainLayout_" stretch="0,0,290">
+     <property name="spacing">
+      <number>0</number>
      </property>
-     <property name="minimumSize">
-      <size>
-       <width>80</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>80</width>
-       <height>16777215</height>
-      </size>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="ltp::client::ModuleButtonsWidget" name="mainModuleButtonWidget_" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-       <horstretch>80</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>80</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>80</width>
-       <height>16777215</height>
-      </size>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="ltp::client::ProcessBar" name="processWidgetBar_" native="true"/>
+     <item>
+      <widget class="ltp::client::AxesInformation" name="axesInformation" native="true">
+       <property name="minimumSize">
+        <size>
+         <width>680</width>
+         <height>228</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="Line" name="line_">
+       <property name="styleSheet">
+        <string notr="true">border-top: 1px solid #E6E6E6;</string>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="viceLayout_" stretch="320,0,360">
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="ltp::base::TextEdit" name="filePreview_" native="true">
+         <property name="minimumSize">
+          <size>
+           <width>320</width>
+           <height>0</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="Line" name="line_2">
+         <property name="styleSheet">
+          <string notr="true">color:#C8C8C8;</string>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="ltp::client::OperationPanel" name="operationPanel_" native="true"/>
+       </item>
+      </layout>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ltp::client::ProcessBar</class>
+   <class>ltp::base::TextEdit</class>
    <extends>QWidget</extends>
-   <header>processbar.h</header>
+   <header>../base/textedit.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>ltp::client::ModuleButtonsWidget</class>
+   <class>ltp::client::AxesInformation</class>
    <extends>QWidget</extends>
-   <header>modulebuttonswidget.h</header>
+   <header>axesinformation.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ltp::client::OperationPanel</class>
+   <extends>QWidget</extends>
+   <header>operationpanel.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
