hua.g.l:1.物理按键对应；2.菜单栏修改；3.增加设置界面（非完整版）

--- a/client/ltpclient.qrc
+++ b/client/ltpclient.qrc
@@ -23,5 +23,7 @@
         <file>image/sub_rest.png</file>
         <file>image/mode_codeless.png</file>
         <file>image/net_disconnected.png</file>
+        <file>image/top.png</file>
+        <file>image/bottom.png</file>
     </qresource>
 </RCC>
