--- a/base/keyboarddialog.ui
+++ b/base/keyboarddialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>KeyBoardDialogClass</class>
- <widget class="QDialog" name="KeyBoardDialogClass">
+ <widget class="QWidget" name="KeyBoardDialogClass">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -67,6 +67,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>1</string>
            </property>
@@ -79,6 +82,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>2</string>
@@ -93,6 +99,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>3</string>
            </property>
@@ -105,6 +114,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>4</string>
@@ -119,6 +131,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>5</string>
            </property>
@@ -131,6 +146,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>6</string>
@@ -145,6 +163,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>7</string>
            </property>
@@ -157,6 +178,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>8</string>
@@ -171,6 +195,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>9</string>
            </property>
@@ -183,6 +210,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>0</string>
@@ -197,6 +227,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>-</string>
            </property>
@@ -209,6 +242,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>=</string>
@@ -244,6 +280,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>Q</string>
            </property>
@@ -256,6 +295,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>W</string>
@@ -270,6 +312,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>E</string>
            </property>
@@ -282,6 +327,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>R</string>
@@ -296,6 +344,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>T</string>
            </property>
@@ -308,6 +359,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>Y</string>
@@ -322,6 +376,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>U</string>
            </property>
@@ -334,6 +391,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>I</string>
@@ -348,6 +408,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>O</string>
            </property>
@@ -361,6 +424,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>P</string>
            </property>
@@ -373,6 +439,9 @@
              <width>88</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string/>
@@ -408,6 +477,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>A</string>
            </property>
@@ -420,6 +492,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>S</string>
@@ -434,6 +509,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>D</string>
            </property>
@@ -446,6 +524,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>F</string>
@@ -460,6 +541,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>G</string>
            </property>
@@ -472,6 +556,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>H</string>
@@ -486,6 +573,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>J</string>
            </property>
@@ -498,6 +588,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>K</string>
@@ -512,6 +605,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>L</string>
            </property>
@@ -525,6 +621,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string/>
            </property>
@@ -535,7 +634,7 @@
       </item>
       <item>
        <widget class="QWidget" name="lineWidget4_" native="true">
-        <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="90,58,58,58,58,58,58,0,69,69,69">
+        <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="90,0,58,58,58,58,58,0,69,69,69">
          <property name="spacing">
           <number>8</number>
          </property>
@@ -559,6 +658,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>shift</string>
            </property>
@@ -578,6 +680,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>Z</string>
            </property>
@@ -590,6 +695,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>X</string>
@@ -604,6 +712,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>C</string>
            </property>
@@ -616,6 +727,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>V</string>
@@ -630,6 +744,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>B</string>
            </property>
@@ -642,6 +759,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>N</string>
@@ -656,6 +776,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>M</string>
            </property>
@@ -668,6 +791,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>[</string>
@@ -682,6 +808,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>]</string>
            </property>
@@ -694,6 +823,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>\</string>
@@ -729,6 +861,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>;</string>
            </property>
@@ -741,6 +876,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>'</string>
@@ -755,6 +893,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string/>
            </property>
@@ -767,6 +908,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>,</string>
@@ -781,6 +925,9 @@
              <height>31</height>
             </size>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
            <property name="text">
             <string>.</string>
            </property>
@@ -793,6 +940,9 @@
              <width>58</width>
              <height>31</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
             <string>/</string>
