hua.g.l:1.取消hover状态；2.增加文件管理里文件和文件夹区别；3.增加断开连接报警提示；4.物理按键生效

--- a/base/filemanager.ui
+++ b/base/filemanager.ui
@@ -79,6 +79,9 @@
           <height>24</height>
          </size>
         </property>
+        <property name="styleSheet">
+         <string notr="true">border:none;background-image:url(:/LtpClient/image/to_previous.png);</string>
+        </property>
         <property name="text">
          <string/>
         </property>
