1.增加示教编程界面和示教功能框架 2.修改部分信号槽在模块外部执行连接 3.增加当前加工行号更新（未完善，NC显示没有随着行号变化） 4.设定加工界面文本编辑框为不可编辑 5.增加文本框拖动条最小大小

--- a/base/textedit.ui
+++ b/base/textedit.ui
@@ -48,7 +48,7 @@
        <property name="styleSheet">
         <string notr="true">QTextEdit QScrollBar::vertical {margin: 16px 0px 16px 0px;background-color:#E6E6E6; border: 0px; width: 16px;}
 
-QTextEdit QScrollBar::handle:vertical{background:rgba(0,0,0,51);}
+QTextEdit QScrollBar::handle:vertical{background:rgba(0,0,0,51);min-height:20px;}
 QTextEdit QScrollBar::handle:vertical:pressed{background:rgba(0,0,0,153);}
 QTextEdit QScrollBar::add-line:vertical{height:16px;width:16px;subcontrol-position:bottom left;subcontrol-origin: margin; image:url(&quot;:/LtpClient/image/bottom.png&quot;); background-color:#E6E6E6;} 
 QTextEdit QScrollBar::add-line:vertical:pressed{height:16px;width:16px;subcontrol-position:bottom left;subcontrol-origin: margin; image:url(&quot;:/LtpClient/image/bottom.png&quot;); background-color:rgba(0,0,0,153);} 
