--- a/client/programeditwidget.ui
+++ b/client/programeditwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>838</width>
+    <width>946</width>
     <height>519</height>
    </rect>
   </property>
@@ -237,10 +237,7 @@
         <property name="spacing">
          <number>0</number>
         </property>
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
+        <property name="margin">
          <number>0</number>
         </property>
         <item>
