--- a/client/programeditwidget.ui
+++ b/client/programeditwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>946</width>
+    <width>838</width>
     <height>519</height>
    </rect>
   </property>
@@ -62,8 +62,20 @@
       </item>
       <item>
        <widget class="Line" name="line_3">
+        <property name="minimumSize">
+         <size>
+          <width>1</width>
+          <height>24</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>1</width>
+          <height>24</height>
+         </size>
+        </property>
         <property name="styleSheet">
-         <string notr="true">border-left: 1px solid #D2D2D2;</string>
+         <string notr="true">QFrame{border:none;background:#E6E6E6;}</string>
         </property>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -86,8 +98,20 @@
       </item>
       <item>
        <widget class="Line" name="line_4">
+        <property name="minimumSize">
+         <size>
+          <width>1</width>
+          <height>24</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>1</width>
+          <height>24</height>
+         </size>
+        </property>
         <property name="styleSheet">
-         <string notr="true">border-left: 1px solid #D2D2D2;</string>
+         <string notr="true">QFrame{border:none;background:#E6E6E6;}</string>
         </property>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -117,8 +141,20 @@
       </item>
       <item>
        <widget class="Line" name="line_5">
+        <property name="minimumSize">
+         <size>
+          <width>1</width>
+          <height>24</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>1</width>
+          <height>24</height>
+         </size>
+        </property>
         <property name="styleSheet">
-         <string notr="true">border-left: 1px solid #D2D2D2;</string>
+         <string notr="true">QFrame{border:none;background:#E6E6E6;}</string>
         </property>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -140,8 +176,20 @@
       </item>
       <item>
        <widget class="Line" name="line_6">
+        <property name="minimumSize">
+         <size>
+          <width>1</width>
+          <height>24</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>1</width>
+          <height>24</height>
+         </size>
+        </property>
         <property name="styleSheet">
-         <string notr="true">border-left: 1px solid #D2D2D2;</string>
+         <string notr="true">QFrame{border:none;background:#E6E6E6;}</string>
         </property>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -188,13 +236,34 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="programTitleLabel_">
-     <property name="styleSheet">
-      <string notr="true">font:13px SIMHEI;</string>
-     </property>
-     <property name="text">
-      <string>本地存储器：</string>
-     </property>
+    <widget class="QWidget" name="addressLabelWidgt_" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <property name="leftMargin">
+       <number>10</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="programTitleLabel_">
+        <property name="styleSheet">
+         <string notr="true">font:13px SIMHEI;</string>
+        </property>
+        <property name="text">
+         <string>本地存储器：</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
@@ -237,7 +306,10 @@
         <property name="spacing">
          <number>0</number>
         </property>
-        <property name="margin">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
          <number>0</number>
         </property>
         <item>
